# cup-budd

./: .gitignore  README.md  SETUP_SUPABASE_REDIS.md  ZafronixAPI.postman_collection.json  cup-budd.db  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  cup-budd.db  e2e-test-payload.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_rename_kickoff_utc_to_ist.py  cf9eb94f3103_initial_migration.py  ded3420b30bc_add_emoji_column_to_teams.py
backend/app/: config.py  main.py
backend/app/api/v1/: deps.py  (+6 more)
backend/app/db/: base.py  session.py
backend/app/jobs/: fixture_sync.py  live_poller.py  reminder_scheduler.py  scheduler.py
backend/app/schemas/: __init__.py  health.py  matches.py  push.py  teams.py  users.py
backend/cup_budd_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/deploy/: Caddyfile  cup-budd.service
backend/scripts/: download_flags_local.py  download_team_logos.py  ops_fixture_sync_validate.py  populate_team_logos.py  update_team_emojis.py  verify_logos.py
backend/tests/: conftest.py  test_cache.py  test_config.py  test_db_session.py  test_e2e_infra.py  test_fixture_sync_incomplete.py  test_jobs.py  test_main.py  test_match_buckets.py  test_matches_api.py  test_migrations.py  test_models.py  test_notification_rules.py  test_ops_validate_checks.py  test_polling.py  test_push_delivery.py  test_scaffold.py  test_schemas.py  test_smoke.py  test_status_reconciliation.py  test_teams_fixture_coverage.py  test_templates.py  test_zafronix_client.py  test_zafronix_tournament.py
(+151 files in other folders)
